--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- AUTHOR: Tonmoy Talukder -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,6 +15,203 @@
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
+        <div class="d-flex justify-content-center mt-0">
+            <h1 class="mt-5"> <span class="text-success">BUY</span> <span class="text-secondary">MAC</span> </h1>
+        </div>
+    </header>
+    <!-- header end -->
+
+    <!-- main start -->
+    <main class="mt-5">
+        <section>
+            <div class="container px-4">
+                <div class="row gx-5">
+                    <!-- The Mac To Buy -->
+                    <div class="col-lg-6 col-md-12">
+                        <div class="d-flex justify-content-center p-1">
+                            <img class="w-75" src="images/mac.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="p-0">
+                            <!-- Mac Customization Intro -->
+                            <div class="mb-5">
+                                <h1>Customize your Blue 24-inch </br>iMac with Apple M1 chip.</h1>
+                                <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency</br>
+                                    cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB</br>
+                                    SSD storage Two Thunderbolt/USB 4 ports Magic Mouse Magic Keyboard -</br>
+                                    US English</p>
+                            </div>
+
+                            <!-- Memory Cart Button -->
+                            <div class="mb-5">
+                                <div class="container px-0">
+                                    <div class="row gx-1">
+                                        <p><b>Memory</b></p>
+                                        <div class="col-4">
+                                            <div class="px-0">
+                                                <button onclick="borderA()" type="button" id="memory-8-gb"
+                                                    class="btn btn-outline-dark">8GB
+                                                    unified
+                                                    memory</button>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="px-0">
+                                                <button onclick="borderB()" type="button" id="memory-16-gb"
+                                                    class="btn btn-outline-dark">16GB
+                                                    unified
+                                                    memory</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Storage Cart Button -->
+                            <div class="mb-5">
+                                <div class="container px-0">
+                                    <div class="row gx-1">
+                                        <p><b>Storage</b></p>
+                                        <div class="col-4">
+                                            <div class="px-0">
+                                                <button onclick="borderC()" type="button" id="ssd-256-gb"
+                                                    class="btn btn-outline-dark">256GB SSD
+                                                    storage</button>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="px-0">
+                                                <button onclick="borderD()" type="button" id="ssd-512-gb"
+                                                    class="btn btn-outline-dark">512GB SSD
+                                                    storage</button>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="px-0">
+                                                <button onclick="borderE()" type="button" id="ssd-1-tb"
+                                                    class="btn btn-outline-dark">1TB SSD
+                                                    storage</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Delivery Option Button -->
+                            <div class="mb-5">
+                                <div class="container px-0">
+                                    <div class="row gx-1">
+                                        <p><b>Choose your delivery option</b></p>
+                                        <div class="col-6">
+                                            <div class="px-0">
+                                                <button onclick="borderF()" type="button" id="general-delivery"
+                                                    class="btn btn-outline-dark">Friday, Aug 25 FREE
+                                                    Prime
+                                                    Delivery</button>
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="px-0">
+                                                <button onclick="borderG()" type="button" id="speedy-delivery"
+                                                    class="btn btn-outline-dark">Friday, Aug 21 Delivery
+                                                    charge $20</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Cart Area -->
+                            <div>
+                                <div class="row">
+                                    <!-- Products Added To Cart -->
+                                    <div class="col-md-4 col-sm-6 px-0">
+                                        <h6 class="px-1"><b>Best Price</b></h6>
+                                        <hr />
+                                        <h6 class="px-1"><b>Extra Memory Cost</b></h6>
+                                        <hr />
+                                        <h6 class="px-1"><b>Extra Storage Cost</b></h6>
+                                        <hr />
+                                        <h6 class="px-1"><b>Delivery Charge</b></h6>
+                                        <hr style="height:2px; border-width:0; color:black; background-color:black">
+                                        <h6 class="px-1"><b>Total Price</b></h6>
+                                        <hr />
+
+                                    </div>
+
+                                    <!-- Product Prices Added To Cart -->
+                                    <div class="col-md-1 col-sm-6 px-0 status">
+                                        <h6 class="px-0"><b>$<span id="best-price">1299</span></b></h6>
+                                        <hr />
+                                        <h6 class="px-0"><b>$<span id="extra-memory-cost">0</span></b></h6>
+                                        <hr />
+                                        <h6 class="px-0"><b>$<span id="extra-storage-cost">0</span></b></h6>
+                                        <hr />
+                                        <h6 class="px-0"><b>$<span id="delivery-charge">0</span></b></h6>
+                                        <hr style="height:2px; border-width:0; color:black; background-color:black">
+                                        <h6 class="px-0"><b>$<span id="total-price">1299</span></b></h6>
+                                        <hr />
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Coupon To Get 20% Discount -->
+                            <div>
+                                <div class="px-0">
+                                    <div class="row gx-0">
+                                        <div class="col-4">
+                                            <div class="px-0">
+                                                <input type="text" class="form-control" id="coupon-code">
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="px-0">
+                                                <button id="coupon-apply" class="btn btn-danger">Apply</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Horizontal Line -->
+        <hr style="height:2px; width: 90%; border-width:0; color:black; background-color:black" class="mx-auto">
+
+        <!-- Total Price after Applying Coupon Code -->
+        <div class="mt-0">
+            <div class="container px-0">
+                <div class="row d-flex justify-content-center gx-0">
+                    <div class="col-lg-1 col-md-4 col-sm-6">
+                        <div class="d-flex justify-content-center px-0">
+                            <h1 class="px-1">Total:</h1>
+                        </div>
+                    </div>
+                    <div class="col-lg-1 col-md-4 col-sm-6">
+                        <div class="d-flex justify-content-center px-0">
+                            <h1 class="px-0">$<span id="total-after-coupon">1299</span></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- main end -->
+
+    <!-- footer start -->
+    <footer>
+        <div class="d-flex justify-content-center mt-0">
+            <p class="mt-5 text-secondary">&copy;2021, Tonmoy</p>
+        </div>
+    </footer>
+    <!-- footer end -->
 
     <!-- JS Link -->
     <script src="js/app.js"></script>
