--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </section>
 
         <!-- Horizontal Line -->
-        <hr style="height:2px; width: 90%; border-width:0; color:black; background-color:black" class="mx-auto">
+        <hr class="mx-auto mac-book-horizontal-line">
 
         <!-- Total Price after Applying Coupon Code -->
         <div class="mt-0">
