--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Fav Icon -->
+    <link rel="shortcut icon" type="image/png" href="images/mac.png" />
 </head>
 
 <body>
@@ -34,6 +36,7 @@
                             <img class="w-75" src="images/mac.png" alt="">
                         </div>
                     </div>
+                    <!-- Mac Customization -->
                     <div class="col-lg-6 col-md-12">
                         <div class="p-0">
                             <!-- Mac Customization Intro -->
@@ -73,23 +76,23 @@
                             <!-- Storage Cart Button -->
                             <div class="mb-5">
                                 <div class="container px-0">
-                                    <div class="row gx-1">
+                                    <div class="row gx-1 gy-2">
                                         <p><b>Storage</b></p>
-                                        <div class="col-4">
+                                        <div class="col-lg-4">
                                             <div class="px-0">
                                                 <button onclick="borderC()" type="button" id="ssd-256-gb"
                                                     class="btn btn-outline-dark">256GB SSD
                                                     storage</button>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-lg-4">
                                             <div class="px-0">
                                                 <button onclick="borderD()" type="button" id="ssd-512-gb"
                                                     class="btn btn-outline-dark">512GB SSD
                                                     storage</button>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-lg-4">
                                             <div class="px-0">
                                                 <button onclick="borderE()" type="button" id="ssd-1-tb"
                                                     class="btn btn-outline-dark">1TB SSD
