--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Fav Icon -->
-    <link rel="shortcut icon" type="image/png" href="images/mac.png" />
+    <link rel="shortcut icon" type="image/png" href="images/mac-icon.png" />
 </head>
 
 <body>
