--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <div class="container px-0">
                                     <div class="row gx-1">
                                         <p><b>Memory</b></p>
-                                        <div class="col-4">
+                                        <div class="col-lg-6 col-4">
                                             <div class="px-0">
                                                 <button onclick="borderA()" type="button" id="memory-8-gb"
                                                     class="btn btn-outline-dark">8GB
@@ -61,7 +61,7 @@
                                                     memory</button>
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-lg-6 col-4">
                                             <div class="px-0">
                                                 <button onclick="borderB()" type="button" id="memory-16-gb"
                                                     class="btn btn-outline-dark">16GB
@@ -165,12 +165,12 @@
                             <div>
                                 <div class="px-0">
                                     <div class="row gx-0">
-                                        <div class="col-4">
+                                        <div class="col-6">
                                             <div class="px-0">
                                                 <input type="text" class="form-control" id="coupon-code">
                                             </div>
                                         </div>
-                                        <div class="col-4">
+                                        <div class="col-6">
                                             <div class="px-0">
                                                 <button id="coupon-apply" class="btn btn-danger">Apply</button>
                                             </div>
